# Clickhouse_Study

./: .gitignore  README.md  pyproject.toml
03-quickstart/: README.md
03-quickstart/docker/: docker-compose.yml
03-quickstart/docker/config_ch/: config.xml  users.xml
04-table-engines/: README.md
04-table-engines/SQL/: 01-create_table.sql  02-generate_random.sql  03-insert.sql  04-query_samples.sql
05-database-engines/: .gitignore  README.md
06-data-integration-mongodb/: README.md  acess_mongo.py  mongo.sql
07-data-integration-s3/: README.md  exporta_data.sql  read_data_s3.sql  s3.sql  sample_data.sql
10-data-integration-url/: README.md  script.sql
11-data-ingestion-csv/: README.md  create_table.sql
12-data-ingestion-json/: README.md  create_table.sql
13-data-ingestion-avro/: README.md  create_table.sql
14-data-ingestion-parquet/: README.md  create_table.sql
