[tool.poetry]
name = "clickhouse-study"
version = "0.1.0"
description = ""
authors = ["Gabriel Mizuno <gabrielmizuno@gmail.com>"]
readme = "README.md"
packages = [{include = "clickhouse_study"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"
minio = "^7.1.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
